--- a/grade-calculator/grade.css
+++ b/grade-calculator/grade.css
@@ -31,10 +31,10 @@ body {
   overflow: hidden;
   width: 0;
   display: inline-block;
-  animation: typing 3s steps(30, end) forwards, blink 0.5s step-end 6;
+  .typing-text {
+  animation: typing 3s steps(30) forwards, blink 0.5s step-end 6;
 }
-
-
+}
 /* 📥 Input Fields */
 input {
   width: 85%;
