--- a/grade-calculator/grade.css
+++ b/grade-calculator/grade.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Poppins';
+  src: url('./fonts/Poppins-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
